feat: add onboardingCompletedAt field to UserSettings interface
